src/sample/gramatica_BasicaParser.java
// Generated from /home/ckmu32/IdeaProjects/Traductores_Seminario/src/sample/gramatica_Basica.g4 by ANTLR 4.5.3
package sample;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramatica_BasicaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, RESERVADAS=23, OPERADORES_LOGICOS=24, 
		OPERADOR_NEGACION=25, CONDICION=26, COMPARADORES=27, CARACTER=28, LETRA=29, 
		COMENTARIO=30, IDENTIFICADOR=31, NUMERO=32, FLOTANTE=33, TIPO_DATO=34, 
		WS=35;
	public static final int
		RULE_auxiliar = 0, RULE_parse = 1, RULE_declaration = 2, RULE_tipoDato = 3, 
		RULE_reservadas_operadores = 4, RULE_operaciones = 5, RULE_comando_selectivo = 6, 
		RULE_comando_recursivo = 7, RULE_reservadas = 8, RULE_operadorL = 9, RULE_operadorN = 10, 
		RULE_asignarValor = 11, RULE_booleano = 12, RULE_caracter = 13, RULE_string = 14, 
		RULE_entero = 15, RULE_flotante = 16, RULE_comando_si = 17, RULE_comando_while = 18;
	public static final String[] ruleNames = {
		"auxiliar", "parse", "declaration", "tipoDato", "reservadas_operadores", 
		"operaciones", "comando_selectivo", "comando_recursivo", "reservadas", 
		"operadorL", "operadorN", "asignarValor", "booleano", "caracter", "string", 
		"entero", "flotante", "comando_si", "comando_while"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'+'", "'-'", "'*'", "'/'", "'\n'", "'='", "'true'", "'false'", 
		"'bool'", "'char'", "'string'", "'entero'", "'flotante'", "'si'", "'('", 
		"')'", "'entonces'", "'rompe'", "'sino'", "'terminasi'", "'mientras'", 
		"'terminamientras'", null, null, "'no'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "RESERVADAS", 
		"OPERADORES_LOGICOS", "OPERADOR_NEGACION", "CONDICION", "COMPARADORES", 
		"CARACTER", "LETRA", "COMENTARIO", "IDENTIFICADOR", "NUMERO", "FLOTANTE", 
		"TIPO_DATO", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramatica_Basica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramatica_BasicaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AuxiliarContext extends ParserRuleContext {
		public ParseContext parse() {
			return getRuleContext(ParseContext.class,0);
		}
		public AuxiliarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_auxiliar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).enterAuxiliar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).exitAuxiliar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramatica_BasicaVisitor ) return ((gramatica_BasicaVisitor<? extends T>)visitor).visitAuxiliar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AuxiliarContext auxiliar() throws RecognitionException {
		AuxiliarContext _localctx = new AuxiliarContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_auxiliar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			parse();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(gramatica_BasicaParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramatica_BasicaVisitor ) return ((gramatica_BasicaVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40);
				declaration();
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__20) | (1L << RESERVADAS) | (1L << OPERADORES_LOGICOS) | (1L << OPERADOR_NEGACION) | (1L << IDENTIFICADOR) | (1L << NUMERO) | (1L << FLOTANTE))) != 0) );
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TipoDatoContext tipoDato() {
			return getRuleContext(TipoDatoContext.class,0);
		}
		public Reservadas_operadoresContext reservadas_operadores() {
			return getRuleContext(Reservadas_operadoresContext.class,0);
		}
		public Comando_selectivoContext comando_selectivo() {
			return getRuleContext(Comando_selectivoContext.class,0);
		}
		public Comando_recursivoContext comando_recursivo() {
			return getRuleContext(Comando_recursivoContext.class,0);
		}
		public AsignarValorContext asignarValor() {
			return getRuleContext(AsignarValorContext.class,0);
		}
		public OperacionesContext operaciones() {
			return getRuleContext(OperacionesContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramatica_BasicaVisitor ) return ((gramatica_BasicaVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(53);
			switch (_input.LA(1)) {
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				tipoDato();
				}
				break;
			case RESERVADAS:
			case OPERADORES_LOGICOS:
			case OPERADOR_NEGACION:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				reservadas_operadores();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 3);
				{
				setState(49);
				comando_selectivo();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 4);
				{
				setState(50);
				comando_recursivo();
				}
				break;
			case IDENTIFICADOR:
				enterOuterAlt(_localctx, 5);
				{
				setState(51);
				asignarValor();
				}
				break;
			case NUMERO:
			case FLOTANTE:
				enterOuterAlt(_localctx, 6);
				{
				setState(52);
				operaciones();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoDatoContext extends ParserRuleContext {
		public List<BooleanoContext> booleano() {
			return getRuleContexts(BooleanoContext.class);
		}
		public BooleanoContext booleano(int i) {
			return getRuleContext(BooleanoContext.class,i);
		}
		public List<CaracterContext> caracter() {
			return getRuleContexts(CaracterContext.class);
		}
		public CaracterContext caracter(int i) {
			return getRuleContext(CaracterContext.class,i);
		}
		public List<StringContext> string() {
			return getRuleContexts(StringContext.class);
		}
		public StringContext string(int i) {
			return getRuleContext(StringContext.class,i);
		}
		public List<EnteroContext> entero() {
			return getRuleContexts(EnteroContext.class);
		}
		public EnteroContext entero(int i) {
			return getRuleContext(EnteroContext.class,i);
		}
		public List<FlotanteContext> flotante() {
			return getRuleContexts(FlotanteContext.class);
		}
		public FlotanteContext flotante(int i) {
			return getRuleContext(FlotanteContext.class,i);
		}
		public TipoDatoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoDato; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).enterTipoDato(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).exitTipoDato(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramatica_BasicaVisitor ) return ((gramatica_BasicaVisitor<? extends T>)visitor).visitTipoDato(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoDatoContext tipoDato() throws RecognitionException {
		TipoDatoContext _localctx = new TipoDatoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipoDato);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(60); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(60);
					switch (_input.LA(1)) {
					case T__8:
						{
						setState(55);
						booleano();
						}
						break;
					case T__9:
						{
						setState(56);
						caracter();
						}
						break;
					case T__10:
						{
						setState(57);
						string();
						}
						break;
					case T__11:
						{
						setState(58);
						entero();
						}
						break;
					case T__12:
						{
						setState(59);
						flotante();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(62); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Reservadas_operadoresContext extends ParserRuleContext {
		public List<ReservadasContext> reservadas() {
			return getRuleContexts(ReservadasContext.class);
		}
		public ReservadasContext reservadas(int i) {
			return getRuleContext(ReservadasContext.class,i);
		}
		public List<OperadorLContext> operadorL() {
			return getRuleContexts(OperadorLContext.class);
		}
		public OperadorLContext operadorL(int i) {
			return getRuleContext(OperadorLContext.class,i);
		}
		public List<OperadorNContext> operadorN() {
			return getRuleContexts(OperadorNContext.class);
		}
		public OperadorNContext operadorN(int i) {
			return getRuleContext(OperadorNContext.class,i);
		}
		public Reservadas_operadoresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reservadas_operadores; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).enterReservadas_operadores(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).exitReservadas_operadores(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramatica_BasicaVisitor ) return ((gramatica_BasicaVisitor<? extends T>)visitor).visitReservadas_operadores(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Reservadas_operadoresContext reservadas_operadores() throws RecognitionException {
		Reservadas_operadoresContext _localctx = new Reservadas_operadoresContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_reservadas_operadores);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(67); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(67);
					switch (_input.LA(1)) {
					case RESERVADAS:
						{
						setState(64);
						reservadas();
						}
						break;
					case OPERADORES_LOGICOS:
						{
						setState(65);
						operadorL();
						}
						break;
					case OPERADOR_NEGACION:
						{
						setState(66);
						operadorN();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(69); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacionesContext extends ParserRuleContext {
		public List<TerminalNode> NUMERO() { return getTokens(gramatica_BasicaParser.NUMERO); }
		public TerminalNode NUMERO(int i) {
			return getToken(gramatica_BasicaParser.NUMERO, i);
		}
		public List<TerminalNode> FLOTANTE() { return getTokens(gramatica_BasicaParser.FLOTANTE); }
		public TerminalNode FLOTANTE(int i) {
			return getToken(gramatica_BasicaParser.FLOTANTE, i);
		}
		public OperacionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operaciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).enterOperaciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).exitOperaciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramatica_BasicaVisitor ) return ((gramatica_BasicaVisitor<? extends T>)visitor).visitOperaciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperacionesContext operaciones() throws RecognitionException {
		OperacionesContext _localctx = new OperacionesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_operaciones);
		int _la;
		try {
			int _alt;
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(71);
				_la = _input.LA(1);
				if ( !(_la==NUMERO || _la==FLOTANTE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(72);
				match(T__0);
				setState(73);
				_la = _input.LA(1);
				if ( !(_la==NUMERO || _la==FLOTANTE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				setState(76); 
				_errHandler.sync(this);
				_alt = 1+1;
				do {
					switch (_alt) {
					case 1+1:
						{
						{
						setState(75);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3))) != 0)) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(78); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				} while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(80);
				match(T__4);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				_la = _input.LA(1);
				if ( !(_la==NUMERO || _la==FLOTANTE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(82);
				match(T__3);
				setState(83);
				_la = _input.LA(1);
				if ( !(_la==NUMERO || _la==FLOTANTE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(84);
				match(T__4);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				_la = _input.LA(1);
				if ( !(_la==NUMERO || _la==FLOTANTE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(86);
				match(T__2);
				setState(87);
				_la = _input.LA(1);
				if ( !(_la==NUMERO || _la==FLOTANTE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(88);
				match(T__4);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				_la = _input.LA(1);
				if ( !(_la==NUMERO || _la==FLOTANTE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(90);
				match(T__1);
				setState(91);
				_la = _input.LA(1);
				if ( !(_la==NUMERO || _la==FLOTANTE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(92);
				match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comando_selectivoContext extends ParserRuleContext {
		public List<Comando_siContext> comando_si() {
			return getRuleContexts(Comando_siContext.class);
		}
		public Comando_siContext comando_si(int i) {
			return getRuleContext(Comando_siContext.class,i);
		}
		public Comando_selectivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando_selectivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).enterComando_selectivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).exitComando_selectivo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramatica_BasicaVisitor ) return ((gramatica_BasicaVisitor<? extends T>)visitor).visitComando_selectivo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Comando_selectivoContext comando_selectivo() throws RecognitionException {
		Comando_selectivoContext _localctx = new Comando_selectivoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comando_selectivo);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(95);
					comando_si();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(98); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comando_recursivoContext extends ParserRuleContext {
		public List<Comando_whileContext> comando_while() {
			return getRuleContexts(Comando_whileContext.class);
		}
		public Comando_whileContext comando_while(int i) {
			return getRuleContext(Comando_whileContext.class,i);
		}
		public Comando_recursivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando_recursivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).enterComando_recursivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramatica_BasicaListener ) ((gramatica_BasicaListener)listener).exitComando_recursivo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramatica_BasicaVisitor ) return ((gramatica_BasicaVisitor<? extends T>)visitor).visitComando_recursivo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Comando_recursivoContext comando_recursivo() throws RecognitionException {
		Comando_recursivoContext _localctx = new Comando_recursivoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comando_recursivo);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(100);
					comando_while();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(103); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
